# CRTRCOD

./: .env.example  .gitignore  Makefile  README.md  RISK_DISCLAIMER.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
apps/api/: main.py
apps/api/routers/: backtests.py  data.py  paper.py  risk.py  strategies.py
apps/dashboard/: main.py
apps/dashboard/pages/: 01_overview.py  05_risk_controls.py
apps/worker/: celery_app.py
configs/: default.yaml  risk.yaml  strategy_vwap_mean_reversion.yaml
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker  docker-compose.yml
docs/: architecture.md  live_trading_checklist.md  manual_ru.md  risk_policy.md  troubleshooting_ru.md  v2_stability_plan.md
notebooks/: README.md
scripts/: create_sample_data.py  doctor.py  run_backtest_demo.py
tests/: conftest.py
tests/regression/: test_backtest_reproducibility.py  test_lookahead_bias.py  test_risk_limits.py
tests/unit/: test_cost_model.py  test_fill_simulator.py  test_position_sizer.py  test_risk_engine.py
