[project]
name = "crtrcod"
version = "0.1.0"
description = "Research-first cryptocurrency spot trading platform"
requires-python = ">=3.12"
dependencies = [
"fastapi>=0.111.0", "uvicorn[standard]>=0.29.0", "pydantic>=2.7.0", "pydantic-settings>=2.2.0", "ccxt>=4.3.0", "polars>=0.20.0", "pandas>=2.2.0", "numpy>=1.26.0", "duckdb>=0.10.0", "psycopg2-binary>=2.9.9", "sqlalchemy>=2.0.0", "alembic>=1.13.0", "redis>=5.0.0", "celery>=5.3.0", "streamlit>=1.35.0", "plotly>=5.22.0", "mlflow>=2.13.0", "optuna>=3.6.0", "vectorbt>=0.26.0", "pandas-ta>=0.3.14b", "python-dotenv>=1.0.0", "httpx>=0.27.0", "pytest>=8.2.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "ruff>=0.4.0", "mypy>=1.10.0", "slowapi>=0.1.9", "asyncpg>=0.29.0"]
[dependency-groups]
dev = ["pytest-mock>=3.14.0", "freezegun>=1.5.0"]
[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "UP042"]
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"
