[project]
name = "crtrcod"
version = "0.1.0"
description = "Research-first cryptocurrency spot trading platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.111.0", "uvicorn[standard]>=0.29.0", "pydantic>=2.7.0", "pydantic-settings>=2.2.0", "ccxt>=4.3.0", "polars>=0.20.0", "pandas>=2.2.0", "numpy>=1.26.0", "duckdb>=0.10.0", "pyarrow>=15.0.0", "sqlalchemy[asyncio]>=2.0.0", "asyncpg>=0.29.0", "alembic>=1.13.0", "redis>=5.0.0", "celery>=5.3.0", "streamlit>=1.35.0", "plotly>=5.22.0", "mlflow>=2.13.0", "optuna>=3.6.0", "python-dotenv>=1.0.0", "httpx>=0.27.0", "slowapi>=0.1.9", "pyyaml>=6.0.0", "orjson>=3.10.0",
]
[project.optional-dependencies]
research = ["vectorbt>=0.26.0", "pandas-ta>=0.3.14b"]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "pytest-mock>=3.14.0", "freezegun>=1.5.0", "ruff>=0.4.0", "mypy>=1.10.0"]
[tool.uv]
dev-dependencies = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "pytest-mock>=3.14.0", "freezegun>=1.5.0", "ruff>=0.4.0", "mypy>=1.10.0"]
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "packages", "tests"]
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
packages = ["apps", "packages"]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
